--- a/.github/workflows/docker-test.yml
+++ b/.github/workflows/docker-test.yml
@@ -16,32 +16,17 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-
-    steps:
+    container: ma595/detectree-cpu-dev:latest
+steps:
     - uses: actions/checkout@v3
     - name: Set up Python 3.10
       uses: actions/setup-python@v3
       with:
         python-version: "3.10"
-    - name: Install code development dependencies # put in docker container detectree/dev eventually
-      run: |
-        python -m pip install --upgrade pip
-        pip install flake8 pep8-naming pydocstyle pytest isort
-        pip install mypy data-science-types pandas-stubs types-pillow numpy
-        # if [ -f requirements/requirements.txt ]; then pip install -r requirements/requirements.txt; fi
-    - name: Install detectree2 dependencies
-      run: |
-        sudo apt install -yqq software-properties-common
-        sudo add-apt-repository -y ppa:ubuntugis/ppa
-        sudo apt -yqq update
-        sudo apt install -yqq libgdal-dev gdal-bin python3-pip git python3-opencv
-        export CPLUS_INCLUDE_PATH=/usr/include/gdal
-        export C_INCLUDE_PATH=/usr/include/gdal
-        pip3 install torch torchvision torchaudio --extra-index-url https://download.pytorch.org/whl/cpu \
-        opencv-python wandb numpy==1.23 sphinx
-        python3 -m pip install 'git+https://github.com/facebookresearch/detectron2.git'
     - name: Install detectree2
       run: |
+        git clone git@github.com:PatBall1/detectree2.git
+        cd detectree2
         pip install .
     - name: flake8 checks
       continue-on-error: true
