--- a/.github/workflows/docker-test.yml
+++ b/.github/workflows/docker-test.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Detectree CI
+name: Detectree docker CI test
 
 on:
   push:
@@ -17,7 +17,7 @@ jobs:
 
     runs-on: ubuntu-latest
     container: ma595/detectree-cpu-dev:latest
-steps:
+    steps:
     - uses: actions/checkout@v3
     - name: Set up Python 3.10
       uses: actions/setup-python@v3
