--- a/.github/workflows/docker-test.yml
+++ b/.github/workflows/docker-test.yml
@@ -14,7 +14,6 @@ permissions:
 
 jobs:
   build:
-
     runs-on: ubuntu-20.04
     container: ma595/detectree-cpu-all:latest
     steps:
@@ -33,10 +32,15 @@ jobs:
         flake8 detectree2 --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. 
         flake8 detectree2 --count --max-complexity=10 --statistics
-    - name: wget
-      uses: wei/wget@v1 
+    # - name: wget
+    #   uses: wei/wget@v1 
+    #   with:
+    #     args: https://zenodo.org/record/5515408/files/RCD105_MA14_21_orthomosaic_20141023_reprojected_full_res.tif?download=1
+    - name: clone data for tests
+      uses: GuillaumeFalourd/clone-github-repo-action@v2
       with:
-        args: https://zenodo.org/record/5515408/files/RCD105_MA14_21_orthomosaic_20141023_reprojected_full_res.tif?download=1
+        owner: 'ma595'
+        repository: 'detectree2-data'
     - name: pytest checks
       run: |
         # pytest
