--- a/.github/workflows/docker-test.yml
+++ b/.github/workflows/docker-test.yml
@@ -48,6 +48,9 @@ jobs:
         pytest -rP -v detectree2/tests/test_preprocessing.py -k test_tiling
     - name: mypy checks
       run: |
+        which python3
+        python3 --version
+        python3 -c "import mypy; print(mypy.__file__)"
         mypy detectree2
     - name: isort checks
       run: |
