--- a/.github/workflows/docker-test.yml
+++ b/.github/workflows/docker-test.yml
@@ -51,6 +51,7 @@ jobs:
         which python3
         python3 --version
         python3 -c "import mypy; print(mypy.__file__)"
+        pwd
         mypy detectree2
     - name: isort checks
       run: |
