detectree2 already there?

--- a/.github/workflows/docker-test.yml
+++ b/.github/workflows/docker-test.yml
@@ -43,7 +43,8 @@ jobs:
         repository: 'detectree2-data'
     - name: clone latest code
       run:
-        git clone git@github.com:PatBall1/detectree2.git detectree2
+        ls -latr
+        git clone git@github.com:PatBall1/detectree2.git
     - name: pytest checks
       run: |
         # pytest
